# helix-srop-assingment

./: .env  ASSIGNMENT.md  IMPLEMENTATION.md  README.md  alembic.ini  debug_chat.py  helix_srop.db  list_models.py  pyproject.toml  test_account_agent.py  test_retrieval.py  test_search_docs.py
alembic/: env.py
app/: __init__.py  main.py  settings.py
app/agents/: account.py  knowledge.py  orchestrator.py
app/agents/tools/: account_tools.py  search_docs.py
app/api/: errors.py  routes_chat.py  routes_sessions.py  routes_traces.py
app/db/: __init__.py  models.py  session.py
app/obs/: __init__.py  logging.py
app/rag/: ingest.py  vector_store.py
app/srop/: __init__.py  pipeline.py  state.py
chroma_db/: chroma.sqlite3
docs/: api-authentication.md  artifact-registry.md  billing-plans.md  builds.md  deploy-keys.md  fastapi-async-guide.md  google-adk-guide.md  helix-ci-yml.md  observability-overview.md  rag-guide.md  runners.md  secret-scanning.md  support-tickets.md  webhooks.md
tests/: __init__.py  conftest.py  test_api.py  test_retriever.py
